Adding Tree/Graph question. Upgrading to Java 18 + latest Gradle